tests/errors/overflow.moss
fn main[alloc]() {
  println(uint32_to_string(4294967296));
#                          ^^^^^^^^^^ too high to fit in 32-bit unsigned integer
}
